# bluebikes-rebalancing

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pixi.toml  pyproject.toml
bluebikes_rebalancing/: config.py
bluebikes_rebalancing/conf/: __init__.py
bluebikes_rebalancing/conf/storage/: local.yaml
bluebikes_rebalancing/model/: __init__.py  build_model.py  build_model_single.py  constraints.py  constraints_single.py
bluebikes_rebalancing/plots/: __init__.py  plots.py
bluebikes_rebalancing/tasks/prepare_demand/: __init__.py  __main__.py  config.yaml  prepare_demand.py  types.py
bluebikes_rebalancing/tasks/prepare_demand/conf/: config.yaml
bluebikes_rebalancing/tasks/prepare_initial_status/: __init__.py  __main__.py  config.yaml  prepare_initial_status.py  types.py
bluebikes_rebalancing/tasks/prepare_initial_status/conf/: config.yaml
bluebikes_rebalancing/tasks/prepare_network/: __init__.py  __main__.py  config.yaml  prepare_network.py  types.py
bluebikes_rebalancing/tasks/prepare_network/conf/: config.yaml
bluebikes_rebalancing/tasks/run_optimization/: __init__.py  __main__.py  config.yaml  run_optimization.py  types.py
bluebikes_rebalancing/tasks/run_optimization/conf/: config.yaml
bluebikes_rebalancing/tasks/run_optimization_single/: __init__.py  __main__.py  config.yaml  run_optimization_single.py  types.py
notebooks/: 01_calculate_routes.ipynb  02_parametric_analysis.ipynb  03_run_optimization.ipynb
references/: math_model.md  math_model_single.md
