[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bluebikes_rebalancing"
version = "0.0.1"
description = "BlueBikes system rebalancing solver using demand forecasting and linear programming."
authors = [
  { name = "Juan Cruz Ferreyra" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "pip",
    "python-dotenv",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "jupyterlab (>=4.5.5,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "osmnx (>=2.1.0,<3.0.0)",
    "contextily (>=1.7.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "swifter (>=1.4.0,<2.0.0)",
    "gurobipy (>=13.0.1,<14.0.0)",
    "pyomo (>=6.10.0,<7.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["bluebikes_rebalancing"]
force_sort_within_sections = true


