[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bluebikes_rebalancing"
version = "0.0.1"
description = "BlueBikes system rebalancing solver using demand forecasting and linear programming."
authors = [
  { name = "Juan Cruz Ferreyra" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
# Runtime and dev dependencies are managed by pixi (see pixi.toml), which
# installs the scientific stack from conda-forge. This list is intentionally
# empty so there is a single source of truth for dependencies.
dependencies = []
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["bluebikes_rebalancing"]
force_sort_within_sections = true


